@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.helllabs.android.xmp"
 	android:versionCode="10"
-	android:versionName="1.9.5 (Add module loop control, fix IT fingerprinting, fix TP3 and XM loader, fix Archimedes Tracker effects)"
+	android:versionName="1.9.6 (Add elapsed time option, NOOKcolor compatibility, fix portamento of mapped instruments)"
 	android:installLocation="auto">
 	<uses-sdk
 		android:minSdkVersion="3"
